[package]
name = "ac-garden"
version = "0.1.0"
edition = "2021"
authors = ["Mamoru Ota <mamoru_ota1031@keio.jp>"]
description = "Archive your AtCoder AC submissions"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }  # cookiesフィーチャーを追加
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.14.0"
clap = { version = "4.0", features = ["derive"] }
home = "0.5.4"
git2 = "0.15.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
url = "2.3.1"
walkdir = "2.3.3"
